v0.1.5
- Add health

v0.1.4
- Add subheaders to resource
- Set min width
- Add memory information to resource tab 
- Accept env variables
- Fix cpu core bar gaps

v0.1.3
- Check connection before user/password prompt
- Allow empty command arguments
- Fix user input scanning
- Adjust Resource box width from window resizing
- Add a box to the System section

v0.1.2
- Parse command line arguments using Cobra
- Add software header
- Add visualization for cpu cores' load stats

v0.1.1
- Add device information header
- Add uptime
- Add realtime cpu cores' load stats

v0.1.0
- Project setup
- Read input for address, username, and password