@@ -7,6 +7,7 @@ require (
 	github.com/charmbracelet/bubbles v0.10.3
 	github.com/charmbracelet/bubbletea v0.20.0
 	github.com/charmbracelet/lipgloss v0.4.0
+	github.com/daviddengcn/go-colortext v1.0.0
 	github.com/go-routeros/routeros v0.0.0-20210123142807-2a44d57c6730
 	github.com/spf13/cobra v1.4.0
 	golang.org/x/term v0.0.0-20210422114643-f5beecf764ed
