@@ -4,7 +4,7 @@ import (
 	"net"
 	"io"
 	"time"
-	"crypto/tls"
+	"errors"
 
 	"github.com/go-routeros/routeros"
 )
@@ -14,25 +14,28 @@ func Dial(address string, timeout int) (net.Conn, error) {
 	return net.DialTimeout("tcp", address, time.Duration(timeout) * time.Second)
 }
 
-// DialTLS connects and logs in to a RouterOS device using TLS.
-func DialTLS(address, username, password string, tlsConfig *tls.Config) (*routeros.Client, error) {
-	conn, err := tls.Dial("tcp", address, tlsConfig)
-	if err != nil {
-		return nil, err
-	}
-	return NewClientAndLogin(conn, username, password)
-}
-
-func NewClientAndLogin(rwc io.ReadWriteCloser, username, password string) (*routeros.Client, error) {
+func NewRouterOsClient(rwc io.ReadWriteCloser) (*routeros.Client, error) {
 	c, err := routeros.NewClient(rwc)
 	if err != nil {
 		rwc.Close()
 		return nil, err
 	}
-	err = c.Login(username, password)
-	if err != nil {
-		c.Close()
-		return nil, err
-	}
+	
 	return c, nil
+}
+
+func Login(client *routeros.Client, username, password string) (error) {
+	err := client.Login(username, password)
+	
+	if err != nil {
+		client.Close()
+
+		if err.Error() == "EOF" {
+			return errors.New("Unable to login. Check the api service?")
+		}
+			
+		return err
+	}
+
+	return nil
 }
